<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home_24"
        android:orderInCategory="1"
        android:title="@string/home" />

    <item
        android:id="@+id/searchFragment"
        android:enabled="false"
        android:orderInCategory="2"
        android:title="" />

    <item
        android:id="@+id/navigation_favorite"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_24"
        android:orderInCategory="3"
        android:title="@string/favorite" />

    <item
        android:id="@+id/settingFragment"
        android:enabled="true"
        android:icon="@drawable/ic_settings_24"
        android:orderInCategory="4"
        android:title="@string/setting" />

</menu>